--- a/about-us/index.html
+++ b/about-us/index.html
@@ -17,36 +17,36 @@
             <a href="./index.html">Home</a>
         </li>
         <li>
-            <a href="./BMWCar/index.html">Autos</a>
+            <a href="./bmw-car/index.html">Autos</a>
         </li>
         <li>
-            <a href="./InfosBMW/index.html">Infos</a>
+            <a href="./infos-bmw/index.html">Infos</a>
         </li>
         <li>
-            <a href="./AboutUs/index.html">Über uns</a>
+            <a href="./about-us/index.html">Über uns</a>
         </li>
     </nav>
     <h1>Wer sind wir?</h1>
+    <div class="container" >
     <div class="rectangle" >
         <h2>Arda Dönmez</h2>    
-        <p>Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit aa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        <p>Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit.
         </p>
-        <img src="../photos\5er-bmw.jpg" alt="foto von arda">
     </div>
     <div class ="rectangle">
         <h2>Kerimcan Yağci</h2>
         <p>BMW Liebhaber seit seinem fünften Lebensjahr, seit klein auf fahren seine Eltern BMW. Er erstellt die BMW-Modellen und Motoren Seite. Er ist 15 Jahre Alt lebt in Haid und kommt ursprünglich aus der Türkei.</p>
-        <img src="../photos/1er-bmw.jpg" alt="Kerimcan">
     </div>
+</div>
+    <div class="container" >
     <div class="rectangle">
         <h2>Rron Gashi</h2>
         <p>17 Jahre alt,</p>
-        <img src="../photos/bmw_m_twinpower_v8.jpg" alt="Rron">
     </div>
     <div class="rectangle">
         <h2>Daryan Mamsaleh</h2>
         <p>15 Jahre alt, mit einer brennenden Begeisterung für BMW erstellt die Informations Seite auf unserer Seite.</p>
-        <img src="../photos/8er-bmw.jpg" alt="Daryan">
     </div>
+</div>
 </body>
 </html>
