--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -3,121 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMW Group - Markenübersicht</title>
+    <title>BMW Marken</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/loadingAnimation.css">
+    <link rel="stylesheet" href="../styles/cars.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/infos.css">
-    <link rel="stylesheet" href="../styles/loadingAnimation.css"
 </head>
 <body>
-    <header class="header">
-        <div class="startAnimation">
-            <img src="../photos/bmw_logo.png" alt="BMW Logo">
-        </div> 
-        <div class="header-content">
-            <h1>BMW Group</h1>
-            <nav class="nav-links">
-                <a href="../bmw-car/index.html">Autos</a>
-                <a href="../about-us/index.html">Über uns</a>
-                <a href="../infos-bmw/history.html">Geschichte</a>
-                <a href="../index.html"><img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo"></a>
-            </nav>
+<div class="startAnimation">
+    <img src="../photos/bmw_logo.png" alt="BMW Logo">
+</div>
+<a href="../index.html">
+    <img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo">
+</a>
+<div class="main">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../about-us/index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Autos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="../bmw-car/index.html">Serien</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/engines.html">Motoren</a></li>
+                            <li><a class="dropdown-item" href="../bmw-car/x-models.html">X Modelle</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Infos
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
+                            <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../about-us/index.html">Über uns</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
         </div>
-    </header>
+    </nav>
+</div>
 
-    <main class="brands-container">
-        <h2 class="section-title">Unsere Marken</h2>
-        <div class="brands-grid">
-            <article class="brand-card">
-                <img src="../photos/1er-bmw.jpg" alt="BMW" class="brand-image">
-                <div class="brand-content">
-                    <h3 class="brand-name"><strong>BMW</strong></h3>
-                    <p class="brand-description">
-                        BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge
-                        mit Fokus auf Fahrdynamik, innovative Technik und elegantes Design für
-                        vielfältige Bedürfnisse anbietet.
-                    </p>
-                    <div class="brand-specs">
-                        <div class="spec-item">
-                            <span>Gründung:</span>
-                            <span>1916</span>
-                        </div>
-                        <div class="spec-item">
-                            <span>Hauptsitz:</span>
-                            <span>München</span>
-                        </div>
+<main class="brands-container">
+    <h2 class="section-title">Unsere Marken</h2>
+    <div class="brands-grid">
+        <article class="brand-card">
+            <img src="../photos/1er-bmw.jpg" alt="BMW" class="brand-image">
+            <div class="brand-content">
+                <h3 class="brand-name"><strong>BMW</strong></h3>
+                <p class="brand-description">
+                    BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge
+                    mit Fokus auf Fahrdynamik, innovative Technik und elegantes Design für
+                    vielfältige Bedürfnisse anbietet.
+                </p>
+                <div class="brand-specs">
+                    <div class="spec-item">
+                        <span>Gründung:</span>
+                        <span>1916</span>
                     </div>
-                    <a href="https://www.bmw.at/de/index.html" target="_blank" class="brand-link">Mehr erfahren</a>
+                    <div class="spec-item">
+                        <span>Hauptsitz:</span>
+                        <span>München</span>
+                    </div>
                 </div>
-            </article>
+                <a href="https://www.bmw.at/de/index.html" target="_blank" class="brand-link">Mehr erfahren</a>
+            </div>
+        </article>
 
-            <article class="brand-card">
-                <img src="../photos/MINI.jpg" alt="MINI" class="brand-image">
-                <div class="brand-content">
-                    <h3 class="brand-name"><strong>MINI</strong></h3>
-                    <p class="brand-description">
-                        MINI steht für kompakte, stilvolle Fahrzeuge, die mit ihrem
-                        individuellen Design und urbanen Charme ein einzigartiges Fahrerlebnis
-                        für Stadt- und Landfahrten bieten.
-                    </p>
-                    <div class="brand-specs">
-                        <div class="spec-item">
-                            <span>Übernahme:</span>
-                            <span>1994</span>
-                        </div>
-                        <div class="spec-item">
-                            <span>Hauptsitz:</span>
-                            <span>Oxford</span>
-                        </div>
+        <article class="brand-card">
+            <img src="../photos/MINI.jpg" alt="MINI" class="brand-image">
+            <div class="brand-content">
+                <h3 class="brand-name"><strong>MINI</strong></h3>
+                <p class="brand-description">
+                    MINI steht für kompakte, stilvolle Fahrzeuge, die mit ihrem
+                    individuellen Design und urbanen Charme ein einzigartiges Fahrerlebnis
+                    für Stadt- und Landfahrten bieten.
+                </p>
+                <div class="brand-specs">
+                    <div class="spec-item">
+                        <span>Übernahme:</span>
+                        <span>1994</span>
                     </div>
-                    <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="brand-link">Mehr erfahren</a>
+                    <div class="spec-item">
+                        <span>Hauptsitz:</span>
+                        <span>Oxford</span>
+                    </div>
                 </div>
-            </article>
+                <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="brand-link">Mehr erfahren</a>
+            </div>
+        </article>
 
-            <article class="brand-card">
-                <img src="../photos/RollsRoyce.jpg" alt="Rolls-Royce" class="brand-image">
-                <div class="brand-content">
-                    <h3 class="brand-name"><strong>Rolls-Royce</strong></h3>
-                    <p class="brand-description">
-                        Rolls-Royce ist die Luxusmarke der BMW Group und produziert
-                        handgefertigte, exklusive Fahrzeuge, die höchste Ansprüche an Qualität,
-                        Komfort und Luxus erfüllen.
-                    </p>
-                    <div class="brand-specs">
-                        <div class="spec-item">
-                            <span>Übernahme:</span>
-                            <span>1998</span>
-                        </div>
-                        <div class="spec-item">
-                            <span>Hauptsitz:</span>
-                            <span>Goodwood</span>
-                        </div>
+        <article class="brand-card">
+            <img src="../photos/RollsRoyce.jpg" alt="Rolls-Royce" class="brand-image">
+            <div class="brand-content">
+                <h3 class="brand-name"><strong>Rolls-Royce</strong></h3>
+                <p class="brand-description">
+                    Rolls-Royce ist die Luxusmarke der BMW Group und produziert
+                    handgefertigte, exklusive Fahrzeuge, die höchste Ansprüche an Qualität,
+                    Komfort und Luxus erfüllen.
+                </p>
+                <div class="brand-specs">
+                    <div class="spec-item">
+                        <span>Übernahme:</span>
+                        <span>1998</span>
                     </div>
-                    <a href="https://www.rolls-roycemotorcars.com/en_US/home.html" target="_blank" class="brand-link">Mehr erfahren</a>
+                    <div class="spec-item">
+                        <span>Hauptsitz:</span>
+                        <span>Goodwood</span>
+                    </div>
                 </div>
-            </article>
+                <a href="https://www.rolls-roycemotorcars.com/en_US/home.html" target="_blank" class="brand-link">Mehr erfahren</a>
+            </div>
+        </article>
 
-            <article class="brand-card">
-                <img src="../photos/BmwMotorrad.jpg" alt="BMW Motorrad" class="brand-image">
-                <div class="brand-content">
-                    <h3 class="brand-name"><strong>BMW Motorrad</strong></h3>
-                    <p class="brand-description">
-                        BMW Motorrad ist die Motorradsparte von BMW, die hochwertige Motorräder
-                        für verschiedene Einsatzbereiche wie Sport, Touring und Adventure mit
-                        fortschrittlicher Technik und charakteristischem Design herstellt.
-                    </p>
-                    <div class="brand-specs">
-                        <div class="spec-item">
-                            <span>Gründung:</span>
-                            <span>1923</span>
-                        </div>
-                        <div class="spec-item">
-                            <span>Hauptsitz:</span>
-                            <span>Berlin</span>
-                        </div>
+        <article class="brand-card">
+            <img src="../photos/BmwMotorrad.jpg" alt="BMW Motorrad" class="brand-image">
+            <div class="brand-content">
+                <h3 class="brand-name"><strong>BMW Motorrad</strong></h3>
+                <p class="brand-description">
+                    BMW Motorrad ist die Motorradsparte von BMW, die hochwertige Motorräder
+                    für verschiedene Einsatzbereiche wie Sport, Touring und Adventure mit
+                    fortschrittlicher Technik und charakteristischem Design herstellt.
+                </p>
+                <div class="brand-specs">
+                    <div class="spec-item">
+                        <span>Gründung:</span>
+                        <span>1923</span>
                     </div>
-                    <a href="https://www.bmw-motorrad.at/de/home.html#/filter-alle" target="_blank" class="brand-link">Mehr erfahren</a>
+                    <div class="spec-item">
+                        <span>Hauptsitz:</span>
+                        <span>Berlin</span>
+                    </div>
                 </div>
-            </article>
-        </div>
-    </main>
+                <a href="https://www.bmw-motorrad.at/de/home.html#/filter-alle" target="_blank" class="brand-link">Mehr erfahren</a>
+            </div>
+        </article>
+    </div>
+</main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
