--- a/bmw-car/engines.html
+++ b/bmw-car/engines.html
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="./about-us/index.html">Home</a>
+                    <a class="nav-link" href="../about-us/index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,16 +40,16 @@
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="../bmw-car/index.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Infos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./infos-bmw/history.html">Geschichte</a></li>
-                      <li><a class="dropdown-item" href="./infos-bmw/index.html">Marken</a></li>
+                      <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
+                      <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./about-us/index.html">Über uns</a>
+                    <a class="nav-link" href="../about-us/index.html">Über uns</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -57,7 +57,7 @@
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
               </div>
-            </div>
+            </div>  
           </nav>
     </div>
 
