--- a/infos-bmw/cooperation.html
+++ b/infos-bmw/cooperation.html
@@ -86,6 +86,14 @@
       <a href="https://www.bmwgroup-werke.com/steyr/de.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
     </div>
   </div>
+  <div class="card" style="width: 40rem; height: 35rem;">
+    <img src="../photos/mobileye-intel-bmw.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Intel / Mobileye</h5>
+      <p class="card-text">BMW kooperiert mit Intel und Mobileye im Bereich des autonomen Fahrens. Gemeinsam entwickeln sie eine offene Plattform für automatisierte Fahrfunktionen mit dem Ziel, hochautomatisiertes Fahren (Level 3+) in Serienfahrzeugen zu realisieren.</p>
+      <a href="https://www.press.bmwgroup.com/deutschland/article/detail/T0270913DE/bmw-group-intel-und-mobileye-stellen-delphi-als-entwicklungspartner-und-systemintegrator-fuer-die-plattform-zum-autonomen-fahren-vor?language=de" target="_blank" class="btn btn-primary">Mehr erfahren</a>
+    </div>
+  </div>
 
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
