--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -59,6 +59,9 @@
             </div>  
           </nav>
     </div>
+
+    <div class="container mt-4" id="search-results"></div>
+
     <body>
       <video class="christmasvideo" style = "margin-top:-80px; filter:none;" src="../photos/BMW_vision_M_NEXT.mp4" autoplay muted loop></video>
         <div class="text">
@@ -130,6 +133,8 @@
               </div>
             </div>
           </div>
+
+      <script src="../scripts/search.js"></script>
       <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
