--- a/bmw-car/engines.html
+++ b/bmw-car/engines.html
@@ -132,6 +132,7 @@
         </section>
     </main>
 
+    <script src="../scripts/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
