--- a/bmw-car/x-models.html
+++ b/bmw-car/x-models.html
@@ -57,6 +57,9 @@
             </div>
           </nav>
     </div>
+
+    <div class="container mt-4" id="search-results"></div>
+
     <main class="py-5">
         <div class="container">
             <div class="row g-4">
@@ -173,6 +176,7 @@
         </section>
     </main>
 
+    <script src="../scripts/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
