--- a/infos-bmw/cooperation.html
+++ b/infos-bmw/cooperation.html
@@ -60,6 +60,8 @@
     </div>
   </nav>
 </div>
+<div class="container mt-4" id="search-results"></div>
+
 
 <main class="brands-container">
   <div class="card" style="width: 40rem; height: 35rem;">
@@ -96,6 +98,7 @@
   </div>
 
 </main>
+<script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
