--- a/infos-bmw/history.html
+++ b/infos-bmw/history.html
@@ -60,7 +60,7 @@
         </div>
     </nav>
 </div>
-
+<div class="container mt-4" id="search-results"></div>
 <main class="brands-container">
 
     <div class="card" style="width: 100rem; height: 37rem;">
@@ -90,7 +90,7 @@
         </div>
     </div>
 </main>
-
+<script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
