--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -60,6 +60,8 @@
         </div>
     </nav>
 </div>
+<div class="container mt-4" id="search-results"></div>
+
 
 <main class="brands-container">
     <div class="card" style="width: 40rem; height: 35rem;">
@@ -104,6 +106,7 @@
             <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="btn btn-primary">Mehr erfahren</a>
         </div>
 </main>
+<script src="../scripts/search.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
