--- a/infos-bmw/sustainability.html
+++ b/infos-bmw/sustainability.html
@@ -63,6 +63,7 @@
         </div>
     </nav>
 </div>
+<div class="container mt-4" id="search-results"></div>
 
 <main class="brands-container">
     <div class="card" style="width: 100rem; height: 45rem;">
@@ -111,6 +112,7 @@
     </div>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../scripts/search.js"></script>
 
 </body>
 </html>
