--- a/about-us/index.html
+++ b/about-us/index.html
@@ -44,6 +44,8 @@
                       <li><a class="dropdown-item" href="../infos-bmw/history.html">Geschichte</a></li>
                       <li><a class="dropdown-item" href="../infos-bmw/index.html">Marken</a></li>
                       <li><a class="dropdown-item" href="../infos-bmw/sustainability.html">Sustainability</a></li>
+                      <li><a class="dropdown-item" href="../infos-bmw/cooperation.html">Kooperationen</a></li>
+                      <li><a class="dropdown-item" href="../infos-bmw/map.html">Unsere Standorte</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -57,6 +59,7 @@
               </div>
             </div>
           </nav>
+          <div class="container mt-4" id="search-results"></div>
     </div>
     <div class="row mb-2" style = "margin-left:32px;margin-right:32px;">
         <div class="col-md-6">
@@ -112,5 +115,6 @@
             </div>
         </div>
     </div>
+    <script src="../scripts/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </html>
