--- a/bmw-car/special.html
+++ b/bmw-car/special.html
@@ -60,6 +60,7 @@
               </div>
             </div>  
           </nav>
+          <div class="container mt-4" id="search-results"></div>
     </div>
 
     <div class="container mt-4" id="search-results"></div>
@@ -149,6 +150,7 @@ Er bietet ein persönliches und umweltfreundliches Fahrerlebnis.</p>
 
       <script src="../scripts/search.js"></script>
       <script src="script.js"></script>
+      <script src="../scripts/search.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
   </html>
